--- a/05_news.html
+++ b/05_news.html
@@ -61,9 +61,11 @@
 
 			<h2><a name="news"></a>News</h2>
 			<ul>
-				<li><strong>Research Award (Science and Technology), Pontevedra Provincial Council (Spain)</strong>. Related new at <a href="http://goo.gl/Uj6BCN">La Voz de Galicia</a>. </li>
+				<li><p><strong>Research Award (Science and Technology), Pontevedra Provincial Council (Spain)</strong>. Related new at <a href="http://goo.gl/Uj6BCN">La Voz de Galicia</a>. </p></li>
 
-				<li><strong>Survival analysis, R software, teaching...</strong>. Related new at <a href="http://goo.gl/sWKPjx">Faro de Vigo</a>. <a href="http://goo.gl/5H0aOU">PDF here</a>.</li>
+					
+
+				<li><p><strong>Survival analysis, R software, teaching...</strong> Related new at <a href="http://goo.gl/sWKPjx">Faro de Vigo</a> <a href="http://goo.gl/5H0aOU">(PDF here)</a>.</p></li>
 
 				<p><br></p>
 
