--- a/05_news.html
+++ b/05_news.html
@@ -65,7 +65,7 @@
 
 					
 
-				<li><p><strong>Survival analysis, R software, teaching...</strong> Related new at <a href="http://goo.gl/sWKPjx">Faro de Vigo</a> <a href="http://goo.gl/5H0aOU">(PDF here)</a>.</p></li>
+				<li><p><strong>Survival analysis, R software, teaching and more.</strong> Related new at <a href="http://goo.gl/sWKPjx">Faro de Vigo</a> <a href="http://goo.gl/5H0aOU">(PDF here)</a>.</p></li>
 
 				<p><br></p>
 
