added condsurv paper

--- a/02_research.html
+++ b/02_research.html
@@ -64,6 +64,9 @@
 
 			<h4>Journal articles</h4>
 			<ul>
+
+				<li><p><a href="https://journal.r-project.org/archive/accepted/meiramachado-sestelo.pdf">L. Meira-Machado and M. Sestelo (2017). condSURV: an R package for the estimation of the conditional survival function for ordered multivariate failure time data. The R Journal, to appear.</a></p></li>
+
 				<li><p><a href="https://journal.r-project.org/archive/2016-1/sestelo-villanueva-meiramachado-etal.pdf">M. Sestelo, N. M. Villanueva, L. Meira-Machado and J. Roca-Pardiñas (2016). FWDselect: an R package for variable selection in regression models. The R Journal, 8 (1), 132-148.</a></p></li>
 
 				<li><p><a href="http://www.sciencedirect.com/science/article/pii/S0165783616301400">A. Guerra, J. Hernández-Urcera, M. E. Garcia, M. Sestelo, M. Regueira, M. Gilcoto and A. F. González (2016). Spawning habitat selection by the common cuttlefish Sepia officinalis in the Cíes Islands (Northwest Spain). Fisheries Research, 183, 44-54.</a></p></li>
@@ -109,7 +112,7 @@
 
 
 		<div id="copyright">
-		© <a href="http://sestelo.github.io">Marta Sestelo</a>, 2016
+		© <a href="http://sestelo.github.io">Marta Sestelo</a>, 2017
 		</div>
 
 
