--- a/02_research.html
+++ b/02_research.html
@@ -64,6 +64,7 @@
 
 			<h4>Journal articles</h4>
 			<ul>
+				<li><p><a href="https://www.jstatsoft.org">M. Sestelo, N. M. Villanueva, L. Meira-Machado and J. Roca-Pardiñas (2017). npregfast: an R package for nonparametric estimation and inference in life sciences. Journal of Statistical Software, to appear.</a></p></li>
 
 				<li><p><a href="https://journal.r-project.org/archive/accepted/meiramachado-sestelo.pdf">L. Meira-Machado and M. Sestelo (2017). condSURV: an R package for the estimation of the conditional survival function for ordered multivariate failure time data. The R Journal, to appear.</a></p></li>
 
