new paper r journal”

--- a/02_research.html
+++ b/02_research.html
@@ -66,7 +66,7 @@
 			<ul>
 				<li><p><a href="https://www.jstatsoft.org">M. Sestelo, N. M. Villanueva, L. Meira-Machado and J. Roca-Pardiñas (2017). npregfast: an R package for nonparametric estimation and inference in life sciences. Journal of Statistical Software, to appear.</a></p></li>
 
-				<li><p><a href="https://journal.r-project.org/archive/accepted/meiramachado-sestelo.pdf">L. Meira-Machado and M. Sestelo (2017). condSURV: an R package for the estimation of the conditional survival function for ordered multivariate failure time data. The R Journal, to appear.</a></p></li>
+				<li><p><a href="https://journal.r-project.org/archive/2016-2/meiramachado-sestelo.pdf">L. Meira-Machado and M. Sestelo (2016). condSURV: an R package for the estimation of the conditional survival function for ordered multivariate failure time data. The R Journal, 8 (2), 460--473.</a></p></li>
 
 				<li><p><a href="https://journal.r-project.org/archive/2016-1/sestelo-villanueva-meiramachado-etal.pdf">M. Sestelo, N. M. Villanueva, L. Meira-Machado and J. Roca-Pardiñas (2016). FWDselect: an R package for variable selection in regression models. The R Journal, 8 (1), 132-148.</a></p></li>
 
