--- a/index.html
+++ b/index.html
@@ -4,11 +4,20 @@
 
 	<head>
 		<title>Marta Sestelo</title>
+		<subtitle>Marta Sestelo's personal page. </subtitle>
 		<link rel="stylesheet" type="text/css" href="style.css" media="screen">
 		<link rel="stylesheet" href="academicons/academicons.css"/>
 		<link rel="stylesheet" href="font-awesome/css/font-awesome.css"/>  
 		<meta name="description" content="Marta Sestelo's personal page.">
-		<meta name="keywords" content="data science, statistics, uvigo, uminho, University of Vigo, University of Minho, regression, nonparamteric, R, Fortran">
+		<meta name="keywords" content="sestelo, data science, 
+					       statistics, uvigo, uminho, 
+					       University of Vigo, University of Minho, 
+					       regression, nonparamteric, R, Fortran,
+					       machine learning, deep learning, python,
+					       feature selection, clustering, data scientist,
+					       data analytics, algorithm, neural networks,
+					       big data, tensorflow, artificial intelligence,
+					       A/B tests">
 		<meta name="author" content="Marta Sestelo"> 
 	 	<meta name="MobileOptimized" content="HandheldFriendly">  
 	 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
