--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 		<link rel="stylesheet" href="academicons/academicons.css"/>
 		<link rel="stylesheet" href="font-awesome/css/font-awesome.css"/>  
 		<meta name="description" content="Marta Sestelo's personal page.">
-		<meta name="keywords" content="sestelo, data science, 
+		<meta name="keywords" content="marta sestelo, marta sestelo pérez, 
+					       sestelo, data science, 
 					       statistics, uvigo, uminho, 
 					       University of Vigo, University of Minho, 
 					       regression, nonparamteric, R, Fortran,
