--- a/01_aboutme.html
+++ b/01_aboutme.html
@@ -62,7 +62,7 @@
 		<div id="texto">
 
 			<h2><a name="about-me"></a> About me</h2>
-			<p>I am a Postdoctoral Researcher at the Centre of Mathematics (CMAT) of the University of Minho. I am focused on the development of new methodologies and algorithms linked with  statistics. I am interested in  estimation and inference methods of flexible models, in developing practical tools for data analysis and in gaining better understanding of real life issues through statistical knowledge. At the moment, my lines of research are closely related to computational statistics, particularly,  software development, feature selection, applied predictive modeling, nonparametric curves estimation, clustering, model performance, testing procedures, bootstrap resampling methods and applications to different areas of knowledge.</p>
+			<p>I am Postdoctoral Researcher at the Centre of Mathematics (CMAT) of the University of Minho. I am focused on the development of new methodologies and algorithms linked with  statistics. I am interested in  estimation and inference methods of flexible models, in developing practical tools for data analysis and in gaining better understanding of real life issues through statistical knowledge. At the moment, my lines of research are closely related to computational statistics, particularly,  software development, feature selection, applied predictive modeling, nonparametric curves estimation, clustering, model performance, testing procedures, bootstrap resampling methods and applications to different areas of knowledge.</p>
 			<p><br></p>
 			<hr />
 
