last job included

--- a/02_research.html
+++ b/02_research.html
@@ -48,8 +48,10 @@
 		</div>
 
 		<div id="contact1">
-			Marta Sestelo<br/><a href="http://www.cmat.uminho.pt/Default.aspx?lang=en-US">Centre of Mathematics</a><br />University of Minho<br />
+			Marta Sestelo<br/><a href="https://www.gradiant.org/?lang=en">Gradiant</a><br />University of Vigo<br />
 		</div>
+
+
 
 
 		<div id="texto">
@@ -96,6 +98,12 @@
 			</ul>
 
 
+			<h4>PhD thesis</h4>
+			<ul>
+				<li><p><a href="http://www.investigo.biblioteca.uvigo.es/xmlui/handle/11093/305">M. Sestelo (2013). Development and computational implementation of estimation and inference methods in flexible regression models. Application to Biology, Engineering and Environment. Department of Statistics and O.R., University of Vigo.</a></p></li>
+			</ul>
+
+
 
 			<h4>Technical documents</h4>
 			<ul>
@@ -113,7 +121,7 @@
 
 
 		<div id="copyright">
-		© <a href="http://sestelo.github.io">Marta Sestelo</a>, 2017
+		© <a href="http://sestelo.github.io">Marta Sestelo</a>, 2018
 		</div>
 
 
