--- a/03_teaching.html
+++ b/03_teaching.html
@@ -51,7 +51,7 @@
 		</div>
 
 		<div id="contact1">
-			Marta Sestelo<br/><a href="http://www.cmat.uminho.pt/Default.aspx?lang=en-US">Centre of Mathematics</a><br />University of Minho<br />
+			Marta Sestelo<br/><a href="https://www.gradiant.org/?lang=en">Gradiant</a><br />University of Vigo<br />
 		</div>
 
 
@@ -63,12 +63,14 @@
 
 			<h2><a name="teaching"></a>Teaching</h2>
 			<ul>
-				<li><p>Department of Statistics and Operations Research, University of Vigo, Spain. 2014-16.</p></li>
+				<li><p>Department of Statistics and Operations Research, University of Vigo, Spain. 2014-18.</p></li>
 				<li><p>Department of Mathematics, Autonomous University of Barcelona, Spain. 2013-14.</p></li>
 				<li><p>Department of Statistics and Operations Research, University of Vigo, Spain. 2010-13.</p></li>
 				<li><p>Department of Animal Biology, University of Santiago de Compostela, Spain. 2007-09.</p></li>
 			</ul>
 			<p><br></p>
+
+			* Accredited by the ANECA - Spanish National Agency for Quality Assessment and Accreditation - as Associate Professor.
 
 			<hr />
 
@@ -78,7 +80,7 @@
 
 
 		<div id="copyright">
-		© <a href="http://sestelo.github.io">Marta Sestelo</a>, 2017
+		© <a href="http://sestelo.github.io">Marta Sestelo</a>, 2018
 		</div>
 
 
