--- a/04_software.html
+++ b/04_software.html
@@ -50,7 +50,7 @@
 		</div>
 
 		<div id="contact1">
-			Marta Sestelo<br/><a href="http://www.cmat.uminho.pt/Default.aspx?lang=en-US">Centre of Mathematics</a><br />University of Minho<br />
+			Marta Sestelo<br/><a href="https://www.gradiant.org/?lang=en">Gradiant</a><br />University of Vigo<br />
 		</div>
 
 
@@ -93,7 +93,7 @@
 
 
 		<div id="copyright">
-		© <a href="http://sestelo.github.io">Marta Sestelo</a>, 2017
+		© <a href="http://sestelo.github.io">Marta Sestelo</a>, 2018
 		</div>
 
 
