--- a/05_news.html
+++ b/05_news.html
@@ -44,14 +44,14 @@
 
 		<p><br> <br> <br> <br> <br> <br></p>
 
-
-		<div id="contact2">
+<div id="contact2">
 			<a href="mailto:sestelo@uvigo.es">sestelo@uvigo.es</a><br /><a href="http://sestelo.github.io">sestelo.github.io</a> <br /> <a href="http://sidor.uvigo.es">SiDOR group, Uvigo</a><br />
 		</div>
 
 		<div id="contact1">
-			Marta Sestelo<br/><a href="http://www.cmat.uminho.pt/Default.aspx?lang=en-US">Centre of Mathematics</a><br />University of Minho<br />
+			Marta Sestelo<br/><a href="https://www.gradiant.org/?lang=en">Gradiant</a><br />University of Vigo<br />
 		</div>
+
 
 
 
