update brief summary cv

--- a/02_research.html
+++ b/02_research.html
@@ -61,7 +61,11 @@
 
 			<h2><a name="research"></a> Research</h2>
 
-			<p>My complete cv can be download <a href="https://github.com/sestelo/sestelo.github.io/blob/master/sestelo_cv.pdf?raw=true">here</a>.</p>
+
+
+			<p>My complete cv can be downloaded <a href="https://github.com/sestelo/sestelo.github.io/blob/master/m_sestelo_cv_tech.pdf?raw=true">here</a>.</p>
+
+			 <p>A brief summary of it can be downloaded <a href="https://github.com/sestelo/sestelo.github.io/blob/master/m_sestelo_cv_tech_summary.pdf?raw=true">here</a> .</p>
 
 
 			<h4>Journal articles</h4>
