--- a/02_research.html
+++ b/02_research.html
@@ -70,9 +70,11 @@
 
 			<h4>Journal articles</h4>
 			<ul>
-				<li><p><a href="https://onlinelibrary.wiley.com/journal/10970258">N. M. Villanueva, M. Sestelo and L. Meira-Machado (TBA). A method for determining groups in multiple survival curves. Statistics in Medicine.</a></p></li>
+				<li><p><a href="https://rss.onlinelibrary.wiley.com/doi/pdf/10.1111/rssc.12336">M. Sestelo and J. Roca-Pardiñas (2019). Testing critical points of regression curves. An application to the management of aquatic living resources. Journal of the Royal Statistical Society: Series C.</a></p></li>
+
+				<li><p><a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/sim.8016">N. M. Villanueva, M. Sestelo and L. Meira-Machado (2019). A method for determining groups in multiple survival curves. Statistics in Medicine, 38 (5):866-877.</a></p></li>
 				
-				<li><p><a href="https://onlinelibrary.wiley.com/journal/15214036">L. Meira-Machado and M. Sestelo (TBA). Estimation in the progressive illness-death model: a non-exhaustive review. Biometrical Journal.</a></p></li>
+				<li><p><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/bimj.201700200">L. Meira-Machado and M. Sestelo (2019). Estimation in the progressive illness-death model: a non-exhaustive review. Biometrical Journal, 61 (2):245-263.</a></p></li>
 				
 				<li><p><a href="https://www.jstatsoft.org/article/view/v082i12">M. Sestelo, N. M. Villanueva, L. Meira-Machado and J. Roca-Pardiñas (2017). npregfast: an R package for nonparametric estimation and inference in life sciences. Journal of Statistical Software, 82 (12), 1-27.</a></p></li>
 
