--- a/02_research.html
+++ b/02_research.html
@@ -101,6 +101,13 @@
 				<li><p><a href="http://www.bioone.org/doi/abs/10.2983/035.030.0336">M. Sestelo and J. Roca-Pardiñas (2011). A new approach to estimation of the length-weight relationship of Pollicipes pollicipes (Gmelin, 1789) on the Atlantic coast of Galicia (Northwest Spain): Some aspects of its biology and management. Journal of Shellfish Research, 30(3), 939-948.</a></p></li>
 			</ul>
 
+			<h4>Books</h4>
+			<ul>
+				<li>M. Sestelo (2017). A short course on Survival Analysis applied to the Financial Industry, BBVA Data \& Analytics, Madrid.</li><a href="https://bookdown.org/sestelo/sa_financial/">https://bookdown.org/sestelo/sa_financial/</a>
+			</ul>
+
+
+
 
 			<h4>Book chapters</h4>
 			<ul>
@@ -131,7 +138,7 @@
 
 
 		<div id="copyright">
-		© <a href="http://sestelo.github.io">Marta Sestelo</a>, 2018
+		© <a href="http://sestelo.github.io">Marta Sestelo</a>, 2019
 		</div>
 
 
