--- a/04_software.html
+++ b/04_software.html
@@ -63,7 +63,7 @@
 			<ul>
 				<p><br></p>
 				
-				<li><strong>clustcurv</strong> package. Author of this R package (<a href="https://github.com/noramvillanueva/clustcurv/">https://github.com/noramvillanueva/clustcurv/</a>) for clustering curves with an automatic selection of their number. It is focused on both regression and survival curves, using the k-means or k-medians.</li>
+				<li><strong>clustcurv</strong> package. Author of this R package (<a href="https://cran.r-project.org/web/packages/clustcurv/">https://cran.r-project.org/web/packages/clustcurv/</a>) for clustering curves with an automatic selection of their number. It is focused on both regression and survival curves, using the k-means or k-medians.</li>
 
 				<p><br></p>
 				
@@ -93,7 +93,7 @@
 
 
 		<div id="copyright">
-		© <a href="http://sestelo.github.io">Marta Sestelo</a>, 2018
+		© <a href="http://sestelo.github.io">Marta Sestelo</a>, 2019
 		</div>
 
 
