--- a/03_teaching.html
+++ b/03_teaching.html
@@ -61,14 +61,27 @@
 
 
 
-			<h2><a name="teaching"></a>Teaching</h2>
+			<h2><a name="teaching"></a>Teaching at University</h2>
 			<ul>
-				<li><p>Department of Statistics and Operations Research, University of Vigo, Spain. 2014-19.</p></li>
+				<li><p>Department of Statistics and Operations Research, University of Vigo, Spain. 2014-20.</p></li>
 				<li><p>Department of Mathematics, Autonomous University of Barcelona, Spain. 2013-14.</p></li>
 				<li><p>Department of Statistics and Operations Research, University of Vigo, Spain. 2010-13.</p></li>
 				<li><p>Department of Animal Biology, University of Santiago de Compostela, Spain. 2007-09.</p></li>
 			</ul>
 			<p><br></p>
+			
+			
+			<h2><a name="courses"></a>Courses taught</h2>
+			<ul>
+			  <li><p><a href="https://bookdown.org/sestelo/sa_financial/">A short course on Survival Analysis applied to the Financial Industry, BBVA Data & Analytics, Madrid. 2017.</a></p></li>
+				<li><p><a href="https://devfest-2018.gdggalicia.com/speakers/">Machine Learning in Practice, GDG (Google Developers Groups) DevFest Galicia 2018, Santiago de Compostela. 2018.</a></p></li>
+				<li><p><a href="https://github.com/sestelo/tegra_skillshare/tree/master/data_exploration_session"> TEGRA Cybersecurity Center Skillshare Plan 2018, Data exploration, Gradiant, Vigo. 2018.</a></p></li>
+				<li><p><a href="https://github.com/sestelo/tegra_skillshare/tree/master/machine_learning_session"> TEGRA Cybersecurity Center Skillshare Plan 2018, Introduction to Machine Learning Techniques, Gradiant, Vigo, 2018.</a></p></li>
+				<li><p><a href="https://github.com/sestelo/create_R_packages">Workshop on  creation of packages and reports with R, Vicerrectorado de Alumnado, Docencia y Calidad, University of Vigo, Spain. 2013.</a></p></li>
+			</ul>
+			<p><br></p>
+			
+			
 
 			* Accredited by the ANECA - Spanish National Agency for Quality Assessment and Accreditation - as Associate Professor.
 
