--- a/05_news.html
+++ b/05_news.html
@@ -91,6 +91,8 @@
 
 			<h2><a name="post"></a>Blog posts</h2>
 			<ul>
+			  
+			  <li><p><strong><a href="https://www.gradiant.org/blog/digitalizacion-sector-primario-ii/">Smart Farming: hacer las explotaciones ganaderas más eficientes a través de las TIC</a></strong></p></li>
 
 				<li><p><strong><a href="https://www.gradiant.org/en/blog/primary-sector-digital-transformation-i/">Primary sector: why we need to accelerate the digital transformation</a></strong></p></li>
 
