--- a/01_aboutme.html
+++ b/01_aboutme.html
@@ -75,6 +75,9 @@
 			<h2><a name="about-me"></a> About me</h2>
 			<p>Since January 2018 I work at Gradiant (Galician Research and Development Center in Advanced Telecommunications). I am Technical Manager of Data Analytics & AI. Furthermore, I am a Lecturer at the Department of Statistics and O. R. at University of Vigo. Previously, I was a Postdoctoral Researcher at the Centre of Mathematics (CMAT) of the University of Minho.  I hold a PhD from the University of Vigo in Statistics and O.R. I am focused on the development of new techniques, methodologies and algorithms linked with data analysis and artificial intelligence, particularly in the fields of machine learning, computational statistics, spatial analysis, time series analysis, survival analysis, software development and cybersecurity. My interest is moved in the resolution of real life problems throughout (big)data science and intelligent systems. At the moment, my lines of research are closely related to feature selection, predictive modeling, nonparametric curves estimation, clustering, model performance, testing procedures, bootstrap resampling methods, simulation process and optimization, all of them with applications to different areas of knowledge. Recently, I have co-founded WiMLDS Galicia - Women in Machine Learning & Data Science, see <a href="http://wimlds.org/about-the-galicia-team/">http://wimlds.org/about-the-galicia-team/</a>.</p>
 			<p><br></p>
+			
+			
+			<p>My complete cv can be downloaded <a href="https://github.com/sestelo/sestelo.github.io/blob/master/m_sestelo_cv_tech.pdf?raw=true">here</a> and a brief summary of it <a href="https://github.com/sestelo/sestelo.github.io/blob/master/m_sestelo_cv_tech_summary.pdf?raw=true">here</a>.</p>
 			<hr />
 
 		</div>
