last paper in press

--- a/02_research.html
+++ b/02_research.html
@@ -65,7 +65,9 @@
 
 			<h4>Journal articles</h4>
 			<ul>
-				<li><p><a href="https://rss.onlinelibrary.wiley.com/doi/pdf/10.1111/rssc.12336">M. Sestelo and J. Roca-Pardiñas (2019). Testing critical points of regression curves. An application to the management of aquatic living resources. Journal of the Royal Statistical Society: Series C.</a></p></li>
+				<li><p><a href="https://journal.r-project.org/archive/2021/RJ-2021-032/RJ-2021-032.pdf">N. M. Villanueva, M. Sestelo, L. Meira-Machado and J. Roca-Pardiñas (2019). clustcurv: An R Package for Determining Groups in Multiple Curves. The R Journal, 13 (1), 164-183.</a></p></li>
+
+				<li><p><a href="https://rss.onlinelibrary.wiley.com/doi/pdf/10.1111/rssc.12336">M. Sestelo and J. Roca-Pardiñas (2019). Testing critical points of regression curves. An application to the management of aquatic living resources. Journal of the Royal Statistical Society: Series C, 68, 1051-1070.</a></p></li>
 
 				<li><p><a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/sim.8016">N. M. Villanueva, M. Sestelo and L. Meira-Machado (2019). A method for determining groups in multiple survival curves. Statistics in Medicine, 38 (5):866-877.</a></p></li>
 				
