--- a/03_teaching.html
+++ b/03_teaching.html
@@ -83,7 +83,7 @@
 			
 			
 
-			* Accredited by the ANECA - Spanish National Agency for Quality Assessment and Accreditation - as Associate Professor (<em>Profesor Titular de Universidad</em>*).
+			* Accredited by the ANECA - Spanish National Agency for Quality Assessment and Accreditation - as Associate Professor (<em>Profesor Titular</em>).
 
 			<hr />
 
