--- a/02_research.html
+++ b/02_research.html
@@ -65,7 +65,7 @@
 
 			<h4>Journal articles</h4>
 			<ul>
-				<li><p><a href="https://journal.r-project.org/archive/2021/RJ-2021-070/RJ-2021-070.pdf">I. Ortega-Fernandez, M. Sestelo, J.C. Burguillo and C. Piñón-Blanco (2023). Network intrusion detection system for DDoS attacks in ICS using deep autoencoders. Wireless Networks.</a></p></li>
+				<li><p><a href="https://link.springer.com/article/10.1007/s11276-022-03214-3">I. Ortega-Fernandez, M. Sestelo, J.C. Burguillo and C. Piñón-Blanco (2023). Network intrusion detection system for DDoS attacks in ICS using deep autoencoders. Wireless Networks.</a></p></li>
 
 				<li><p><a href="https://www.mdpi.com/2077-1312/10/12/1837"> G. Bidegain, M. Sestelo, P.L. Luque, I. Uriarte, A. Iriarte and F. Villate (2022). The Role of Microplastics in Marine Pathogen Transmission: Retrospective Regression Analysis, Experimental Design, and Disease Modelling. Journal of Marine Science and Engineering, 10 (12), 1837.</a></p></li>
 				
