--- a/02_research.html
+++ b/02_research.html
@@ -66,7 +66,7 @@
 			<h4>Journal articles</h4>
 			<ul>
 				
-				<li><p><a href="https://www.mdpi.com/2227-7390/11/10/2299">. N. M. Villanueva, M. Sestelo, M. M. Fonseca and J. Roca-Pardiñnas. seq2R: An R package to detect change points in DNA sequences, \textit{Mathematics,} 11 (10), 2299.</a></p></li>
+				<li><p><a href="https://www.mdpi.com/2227-7390/11/10/2299"> N. M. Villanueva, M. Sestelo, M. M. Fonseca and J. Roca-Pardiñnas. seq2R: An R package to detect change points in DNA sequences. Mathematics, 11 (10), 2299.</a></p></li>
 				
 				<li><p><a href="https://link.springer.com/article/10.1007/s11276-022-03214-3"> I. Ortega-Fernandez, M. Sestelo, J. C. Burguillo and C. Piñón-Blanco (2023). Network intrusion detection system for DDoS attacks in ICS using deep autoencoders. Wireless Networks.</a></p></li>
 
