--- a/02_research.html
+++ b/02_research.html
@@ -65,8 +65,12 @@
 
 			<h4>Journal articles</h4>
 			<ul>
+
+				<li><p><a href="https://link.springer.com/article/10.1007/s11222-023-10320-5"> I. Ortega-Fernandez, M. Sestelo and N. M. Villanueva (2024). Explainable generalized additive neural networks with independent neural network training. Statistics and Computing, 34 (6).</a></p></li>
+
+				<li><p><a href="https://onlinelibrary.wiley.com/doi/10.1002/bimj.202300084"> M. Sestelo, L. Meira-Machado, N. M. Villanueva and J. Roca-Pardiñas (2024). A method for determining groups in cumulative incidence curves in competing risk data. Biometrical Journal, 66, 2300084.</a></p></li>
 				
-				<li><p><a href="https://www.mdpi.com/2227-7390/11/10/2299"> N. M. Villanueva, M. Sestelo, M. M. Fonseca and J. Roca-Pardiñnas. seq2R: An R package to detect change points in DNA sequences. Mathematics, 11 (10), 2299.</a></p></li>
+				<li><p><a href="https://www.mdpi.com/2227-7390/11/10/2299"> N. M. Villanueva, M. Sestelo, M. M. Fonseca and J. Roca-Pardiñnas (2023). seq2R: An R package to detect change points in DNA sequences. Mathematics, 11 (10), 2299.</a></p></li>
 				
 				<li><p><a href="https://link.springer.com/article/10.1007/s11276-022-03214-3"> I. Ortega-Fernandez, M. Sestelo, J. C. Burguillo and C. Piñón-Blanco (2023). Network intrusion detection system for DDoS attacks in ICS using deep autoencoders. Wireless Networks.</a></p></li>
 
