Add MAGIC project news item to 05_news.html

--- a/05_news.html
+++ b/05_news.html
@@ -64,6 +64,8 @@
 			<h2><a name="news"></a>News</h2>
 			<ul>
 
+				<li><p><strong>MAGIC project</strong>. Link <a href="https://gobio.webs.uvigo.es/proyecto-magic-financiado/">here</a>. </p></li>
+
 				<li><p><strong>21st century Women Technologists: Marta Sestelo</strong>. Link <a href="https://www.gradiant.org/en/blog/women-technologists-marta-sestelo/">here</a>. </p></li>
 
 				<li><p><strong><a href="https://www.gradiant.org/en/news/gradiant-takes-part-at-gdg-devfest-galicia-2018/">Gradiant takes part at GDG DevFest Galicia 2018</a></strong></p></li>
