Add news items for MAGIC project

--- a/05_news.html
+++ b/05_news.html
@@ -63,6 +63,7 @@
 
 			<h2><a name="news"></a>News</h2>
 			<ul>
+				<li><p><strong>MAGIC project: predoctoral FPI and postdoctoral contract</strong>. Link <a href="https://gobio.webs.uvigo.es/contratos_magic/">here</a>. </p></li>
 
 				<li><p><strong>MAGIC project</strong>. Link <a href="https://gobio.webs.uvigo.es/proyecto-magic-financiado/">here</a>. </p></li>
 
