--- a/02_research.html
+++ b/02_research.html
@@ -65,7 +65,8 @@
 
 			<h4>Journal articles</h4>
 			<ul>
-
+				<li><p><a href="https://www.aimspress.com/article/doi/10.3934/math.20251043"> J. Fuentes, I. Ortega-Fernández, N. M. Villanueva and M. Sestelo. (2025). Cybersecurity Threat Detection Based on a UEBA Framework Using Deep Autoencoders. AIMS Mathematics, 10 (10).</a></p></li>
+				
 				<li><p><a href="https://link.springer.com/article/10.1007/s11222-023-10320-5"> I. Ortega-Fernandez, M. Sestelo and N. M. Villanueva (2024). Explainable generalized additive neural networks with independent neural network training. Statistics and Computing, 34 (6).</a></p></li>
 
 				<li><p><a href="https://onlinelibrary.wiley.com/doi/10.1002/bimj.202300084"> M. Sestelo, L. Meira-Machado, N. M. Villanueva and J. Roca-Pardiñas (2024). A method for determining groups in cumulative incidence curves in competing risk data. Biometrical Journal, 66, 2300084.</a></p></li>
