--- a/04_software.html
+++ b/04_software.html
@@ -62,6 +62,10 @@
 			<h2><a name="software"></a>Software</h2>
 			<ul>
 				<p><br></p>
+
+				<li><strong>neuralGAM</strong> package. Author of this R package (<a href="https://cran.r-project.org/web/packages/neuralGAM/index.html">https://cran.r-project.org/web/packages/neuralGAM/</a>) Neural Network framework based on Generalized Additive Models, which trains a different neural network to estimate the contribution of each feature to the response variable. The networks are trained independently, leveraging the local scoring and backfitting algorithms to ensure that the Generalized Additive Model converges and is additive. The resultant Neural Network is a highly accurate and interpretable deep learning model, which can be used for high-risk AI practices where decision-making should be based on accountable and interpretable algorithms.</li>
+
+				<p><br></p>
 				
 				<li><strong>clustcurv</strong> package. Author of this R package (<a href="https://cran.r-project.org/web/packages/clustcurv/">https://cran.r-project.org/web/packages/clustcurv/</a>) for clustering curves with an automatic selection of their number. It is focused on both regression and survival curves, using the k-means or k-medians.</li>
 
