Add Shiny apps section to teaching page
Added a section for Shiny apps with a link to the npregfast app.

--- a/03_teaching.html
+++ b/03_teaching.html
@@ -80,6 +80,16 @@
 				<li><p><a href="https://github.com/sestelo/create_R_packages">Workshop on  creation of packages and reports with R, Vicerrectorado de Alumnado, Docencia y Calidad, University of Vigo, Spain. 2013.</a></p></li>
 			</ul>
 			<p><br></p>
+
+
+		<h2><a name="app"></a>Shiny apps</h2>
+			<ul>
+			  	<li><p><a href="https://github.com/sestelo/shiny_npregfast/archive/refs/heads/master.zip">npregfast Shiny app.</a></p></li>
+				
+			</ul>
+			<p><br></p>
+
+
 			
 		<!--
 
